[package]
name = "fastcgi-server"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"

authors = ["TheJokr <leo@bloecher.dev>"]
repository = "https://github.com/TheJokr/fastcgi-server"
description = "Yet another server-side FastCGI library"
keywords = ["fastcgi", "protocol", "backend", "web"]
categories = ["network-programming", "web-programming"]

[features]
async = ["dep:futures-util", "dep:async-lock"]
log = ["tracing/log"]
trace-more = []

[dependencies]
# Integrations (semver-relevant)
http = { version = "0.2.0", optional = true }

# Exposed to users (semver-relevant)
bitflags = "2.0.0"
tracing = { version = "0.1", default-features = false, features = ["std"] }
futures-util = { version = "0.3.22", optional = true, default-features = false, features = ["std", "io"] }

# Internal
ref-cast = "1.0.11"
thiserror = "1.0"
strum = { version = "0.24.0", features = ["derive", "phf"] }
strum_macros = "0.24.2"
replace_with = "0.1.7"
smallvec = { version = "1.6.0", features = ["union", "const_generics", "write"] }
compact_str = "0.7.0"
# Semaphore::acquire_arc is broken in 2.7.0, bump after next release
async-lock = { version = ">=2.5.0, <2.7.0", optional = true }

[dev-dependencies]
fastrand = "2.0.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
