[package]
name = "fastcgi-server"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.66"

authors = ["TheJokr <leo@bloecher.dev>"]
repository = "https://github.com/TheJokr/fastcgi-server"
description = "Yet another server-side FastCGI library"
keywords = ["fastcgi", "protocol", "backend", "web"]
categories = ["network-programming", "web-programming"]

[features]
async = ["dep:futures-util", "dep:async-lock", "dep:event-listener"]
http = ["dep:http"]
log = ["tracing/log"]
trace-more = []

[dependencies]
# Integrations (semver-relevant)
http = { version = "1.0.0", optional = true }

# Exposed to users (semver-relevant)
bitflags = "2.0.0"
tracing = { version = "0.1.38", default-features = false, features = ["std"] }
futures-util = { version = "0.3.22", optional = true, default-features = false, features = ["std", "io"] }

# Internal
ref-cast = "1.0.21"
thiserror = "2.0.7"
strum = { version = "0.26.3", features = ["derive", "phf"] }
replace_with = "0.1.7"
smallvec = { version = "1.6.0", features = ["union", "const_generics", "write"] }
compact_str = "0.8.0"
async-lock = { version = "3.4.0", optional = true }
event-listener = { version = "5.3.1", optional = true }

[dev-dependencies]
fastrand = "2.2.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.2", features = ["macros", "rt", "net", "signal"] }
tokio-util = { version = "0.7.0", features = ["compat"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[[example]]
name = "hello-cgi"
required-features = ["async", "http"]
